--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -21,14 +21,17 @@ Target DLL:      STCMON51.DLL V0, 1, 0, 18
 Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
-c:\Users\SmartWsn\Downloads\STC8H8K64U-DEMO-CODE\myproject\T12\T12.uvproj
-Project File Date:  08/15/2023
+C:\Users\SmartWsn\Downloads\STC8H8K64U-DEMO-CODE\myproject\T12\T12.uvproj
+Project File Date:  09/10/2023
 
 <h2>Output:</h2>
-Build target 'I2C'
+Rebuild target 'I2C'
 compiling main.c...
 main.c(167): warning C291: not every exit path returns a value
 main.c(180): warning C291: not every exit path returns a value
+compiling iic.c...
+compiling sys.c...
+compiling mpu6050.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -45,8 +48,8 @@ linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
 Program Size: data=9.2 xdata=200 code=7870
-creating hex file from "T12"...
-"T12" - 0 Error(s), 9 Warning(s).
+creating hex file from ".\outputs\T12"...
+".\outputs\T12" - 0 Error(s), 9 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
