--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -25,13 +25,8 @@ C:\Users\SmartWsn\Downloads\STC8H8K64U-DEMO-CODE\myproject\T12\T12.uvproj
 Project File Date:  09/10/2023
 
 <h2>Output:</h2>
-Rebuild target 'I2C'
-compiling main.c...
-main.c(186): warning C291: not every exit path returns a value
-main.c(199): warning C291: not every exit path returns a value
-compiling iic.c...
+Build target 'I2C'
 compiling sys.c...
-compiling mpu6050.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -42,14 +37,12 @@ linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?OLED_DISPLAY_OFF?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_OLED_SHOWSTRING?IIC
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_SHOWCHINESE?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
-Program Size: data=9.2 xdata=240 code=8749
+Program Size: data=9.2 xdata=235 code=8805
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 9 Warning(s).
+".\outputs\T12" - 0 Error(s), 6 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
