更改焊笔状态获取

--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -26,6 +26,7 @@ Project File Date:  09/10/2023
 
 <h2>Output:</h2>
 Build target 'I2C'
+compiling sys.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -39,7 +40,7 @@ linking...
     SEGMENT: ?PR?_OLED_SHOWCHINESE?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
-Program Size: data=9.2 xdata=237 code=9040
+Program Size: data=9.2 xdata=237 code=9007
 creating hex file from ".\outputs\T12"...
 ".\outputs\T12" - 0 Error(s), 6 Warning(s).
 Build Time Elapsed:  00:00:00
