--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -26,7 +26,11 @@ Project File Date:  09/10/2023
 
 <h2>Output:</h2>
 Build target 'I2C'
-compiling sys.c...
+compiling main.c...
+main.c(236): warning C280: 'lastadcval': unreferenced local variable
+main.c(236): warning C280: 'addval': unreferenced local variable
+main.c(215): warning C291: not every exit path returns a value
+main.c(228): warning C291: not every exit path returns a value
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -42,7 +46,7 @@ linking...
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
 Program Size: data=9.2 xdata=237 code=9007
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 6 Warning(s).
+".\outputs\T12" - 0 Error(s), 10 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
