--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -27,8 +27,6 @@ Project File Date:  09/10/2023
 <h2>Output:</h2>
 Build target 'I2C'
 compiling main.c...
-main.c(217): warning C291: not every exit path returns a value
-main.c(230): warning C291: not every exit path returns a value
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -42,9 +40,11 @@ linking...
     SEGMENT: ?PR?_OLED_SHOWCHINESE?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
-Program Size: data=9.2 xdata=237 code=8925
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
+Program Size: data=9.2 xdata=238 code=8803
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 8 Warning(s).
+".\outputs\T12" - 0 Error(s), 7 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
