--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -26,7 +26,8 @@ Project File Date:  09/10/2023
 
 <h2>Output:</h2>
 Build target 'I2C'
-compiling sys.c...
+compiling main.c...
+main.c(59): warning C280: 'mpu_temp': unreferenced local variable
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -44,7 +45,7 @@ linking...
     SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
 Program Size: data=9.2 xdata=242 code=8928
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 7 Warning(s).
+".\outputs\T12" - 0 Error(s), 8 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
