--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: 1 1, 1, LIC=CZVNB-2E6CS-VPPZ0-B4FT4-L12VX-W3PUT
+License Information: 1 SmartWsn, 1, LIC=GM82M-XIC0N-RK8BI-T1LCC-B1KV8-15PFX
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
-Toolchain Path:  D:\keil5\C51\BIN
+Toolchain Path:  D:\Keil_v5\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
 Linker/Locator:  BL51.exe V6.22.4.0
@@ -17,18 +17,15 @@ Library Manager: LIB51.exe V4.30.1.0
 Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0
-Target DLL:      STCMON51.DLL V0, 1, 0, 19
+Target DLL:      STCMON51.DLL V0, 1, 0, 18
 Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
-C:\Users\32539\Desktop\codes\miniT12\T12.uvproj
-Project File Date:  04/04/2024
+C:\Users\SmartWsn\Downloads\STC8H8K64U-DEMO-CODE\myproject\T12\T12.uvproj
+Project File Date:  09/10/2023
 
 <h2>Output:</h2>
 Build target 'I2C'
-compiling main.c...
-main.c(59): warning C280: 'mpu_temp': unreferenced local variable
-compiling mpu6050.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -44,9 +41,9 @@ linking...
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
-Program Size: data=9.2 xdata=242 code=9228
+Program Size: data=9.2 xdata=242 code=9427
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 8 Warning(s).
+".\outputs\T12" - 0 Error(s), 7 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
