--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -22,12 +22,14 @@ Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
 C:\Users\32539\Desktop\codes\miniT12\T12.uvproj
-Project File Date:  04/04/2024
+Project File Date:  04/16/2024
 
 <h2>Output:</h2>
 Build target 'I2C'
 compiling main.c...
 main.c(59): warning C280: 'mpu_temp': unreferenced local variable
+compiling iic.c...
+compiling sys.c...
 compiling mpu6050.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
@@ -47,7 +49,7 @@ linking...
 Program Size: data=9.2 xdata=242 code=9228
 creating hex file from ".\outputs\T12"...
 ".\outputs\T12" - 0 Error(s), 8 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
