--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -25,12 +25,9 @@ C:\Users\32539\Desktop\codes\miniT12\T12.uvproj
 Project File Date:  04/16/2024
 
 <h2>Output:</h2>
-Rebuild target 'I2C'
+Build target 'I2C'
 compiling main.c...
 main.c(65): warning C280: 'mpu_temp': unreferenced local variable
-compiling iic.c...
-compiling sys.c...
-compiling mpu6050.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -46,10 +43,10 @@ linking...
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
-Program Size: data=9.2 xdata=242 code=9240
+Program Size: data=9.2 xdata=262 code=9260
 creating hex file from ".\outputs\T12"...
 ".\outputs\T12" - 0 Error(s), 8 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
