--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -22,15 +22,10 @@ Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
 C:\Users\32539\Desktop\codes\miniT12\T12.uvproj
-Project File Date:  07/22/2024
+Project File Date:  07/28/2024
 
 <h2>Output:</h2>
-Rebuild target 'I2C'
-compiling main.c...
-main.c(65): warning C280: 'mpu_temp': unreferenced local variable
-compiling iic.c...
-compiling sys.c...
-compiling mpu6050.c...
+Build target 'I2C'
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -46,9 +41,9 @@ linking...
     SEGMENT: ?PR?_OLED_DRAWBMP?IIC
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
-Program Size: data=9.2 xdata=262 code=9256
+Program Size: data=9.2 xdata=263 code=9408
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 8 Warning(s).
+".\outputs\T12" - 0 Error(s), 7 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
