--- a/outputs/T12.build_log.htm
+++ b/outputs/T12.build_log.htm
@@ -26,6 +26,8 @@ Project File Date:  07/28/2024
 
 <h2>Output:</h2>
 Build target 'I2C'
+compiling main.c...
+main.c(66): warning C280: 'mpu_temp': unreferenced local variable
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_OLED_COLORTURN?IIC
@@ -43,7 +45,7 @@ linking...
     SEGMENT: ?PR?MPU_GET_TEMPERATURE?MPU6050
 Program Size: data=9.2 xdata=263 code=9408
 creating hex file from ".\outputs\T12"...
-".\outputs\T12" - 0 Error(s), 7 Warning(s).
+".\outputs\T12" - 0 Error(s), 8 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
